# serial_test

./: .gitignore  Cargo.toml  readme.txt  test.xlsx
src/: channel.rs  file_op.rs  main.bak  main.mqtt  main.rs  rust_dev_op.rs  rust_file_op.rs  strip.rs  sync_pub_sub.rs
ui/: main.slint
