[package]
name = "serial_test"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
axum = "0.6.20"
calamine = "0.22.1"
clap = "4.4.11"
config = "0.13.4"
dashmap = "5.5.3"
env_logger = "0.10.0"
log = "0.4.20"
log4rs = "1.2.0"
once_cell = "1.19.0"
parking_lot = "0.12.1"
rumqttc = "0.23.0"
rumqttd = { version = "0.19.0" }
serde = "1.0.193"
serde_yaml = "0.9.27"
simple_logger = "4.2.0"
src = "0.0.6"
thiserror = "1.0.50"
tokio = { version = "1.32.0", features = [
    "rt",
    "time",
    "process",
    "io-util",
    "rt-multi-thread",
    "macros",
] }
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }

[build-dependencies]
slint-build = "1.1.0"
